# wtp

./: .gitignore  .wtp.toml.example  AGENTS.md  ARCHITECTURE.md  Cargo.toml  HOOKS.md  LICENSE  README.md  README_CN.md
.github/workflows/: release.yml
docs/agent-integration/: README.md  claude-code.md  codex.md  cursor.md
scripts/: safe-rm.sh
skills/: README.md
skills/wtp-repo-attach/: SKILL.md
skills/wtp-safe-cleanup/: SKILL.md
skills/wtp-workspace-operator/: SKILL.md
src/: main.rs
src/cli/: cd.rs  completions.rs  create.rs  eject.rs  fuzzy.rs  host.rs  import.rs  ls.rs  mod.rs  remove.rs  shell_init.rs  status.rs  switch.rs  theme.rs
src/core/: config.rs  error.rs  fence.rs  git.rs  mod.rs  workspace.rs  worktree.rs
tests/: integration_test.rs
wtp-derive/: Cargo.toml
wtp-derive/src/: lib.rs
